[gd_scene load_steps=10 format=2]

[ext_resource path="res://PauseMenu/Assets/Sprites/Button-unpaused.png" type="Texture" id=1]
[ext_resource path="res://PauseMenu/Assets/Sprites/Button-unpaused-hover.png" type="Texture" id=2]
[ext_resource path="res://PauseMenu/Assets/Sprites/RetryButton-hover.png" type="Texture" id=3]
[ext_resource path="res://TitleScreen/Assets/Fade_In/FadeIn.gd" type="Script" id=4]
[ext_resource path="res://PauseMenu/Assets/Scripts/PausePopUp.gd" type="Script" id=5]
[ext_resource path="res://PauseMenu/Assets/Sprites/RetryButton.png" type="Texture" id=6]
[ext_resource path="res://TitleScreen/Assets/Fade_In/FadeIn.tscn" type="PackedScene" id=7]
[ext_resource path="res://PauseMenu/Assets/Sprites/GoBackButton.png" type="Texture" id=8]
[ext_resource path="res://PauseMenu/Assets/Sprites/GoBackButton-hover.png" type="Texture" id=9]

[node name="PausePopUp" type="Popup"]
pause_mode = 2
margin_right = 642.0
margin_bottom = 360.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.764706 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_top = 99.0
margin_right = 642.0
margin_bottom = 99.0
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 103.0
margin_right = 642.0
margin_bottom = 261.0
alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_left = 271.0
margin_right = 371.0
margin_bottom = 158.0
alignment = 1

[node name="UnpauseButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_right = 100.0
margin_bottom = 50.0
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )
stretch_mode = 3

[node name="RetryButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 54.0
margin_right = 100.0
margin_bottom = 104.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 3 )
texture_focused = ExtResource( 3 )
stretch_mode = 3

[node name="GoBackButton" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 108.0
margin_right = 100.0
margin_bottom = 158.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )
stretch_mode = 3

[node name="FadeIn" type="ColorRect" parent="." instance=ExtResource( 7 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu/CenterRow/Buttons/UnpauseButton" to="." method="_on_UnpauseButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
